--- a/Employee_compensation_analysis.ipynb
+++ b/Employee_compensation_analysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "Employee_compensation_analysis.ipynb",
-      "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -22,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Irayav/Data-Analysis-Projects/blob/master/Employee_compensation_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Irayav/Data-Analysis/blob/master/Employee_compensation_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -7497,7 +7496,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#Statistical Analysis  of Nursing Jobs in San Francisco: Overtime and Salary"
+        "#Statistical Analysis  of Nursing Jobs in San Francisco: \n",
+        "#Overtime and Salary"
       ]
     },
     {
@@ -7531,7 +7531,7 @@
         "nursing = nursing_jobs.iloc[no_zero_nursing.values]\n",
         "\n",
         "# to show the before and after, I will print shape of the data set before \n",
-        "#and after dropping zero dollar salaries, whic is less than 5% of the data\n",
+        "#and after dropping zero dollar salaries, which is less than 5% of the data\n",
         "\n",
         "print(nursing_jobs.shape)\n",
         "print(nursing.shape)"
